# dotfiles

./: .gitignore  README.md
attic/cauta/: .gitignore  Makefile.am  README.md  bootstrap  cac.pc.in  common.mk.in  configure.ac  makefile  version.sh
attic/cauta/attic/: bits.c  bits.h  hash.h  iconvu.c  iconvu.h  list.c  list.h  system.c  system.h  tests.h
attic/cauta/attic/hash/: adler.c  blake.c  crc.c  cubehash.c  fnv.c  hashfn.h  hsieh.c  murmur3.c  prandom.c  siphash.c  wang.c
attic/cauta/attic/strings/: ctypes.c  ctypes.h  strbuf.c  strbuf.h  strchr.c  strchr.h  strings.h
attic/cauta/attic/tests/: test_hash.c  test_htbl.c  test_strings.c  test_substr.c  test_supstr.c  test_types.c  test_vector.c  test_wstrings.c  test_wsubstr.c  test_wsupstr.c
attic/cauta/attic/wstrings/: wctypes.c  wctypes.h  wstrbuf.c  wstrbuf.h  wstrchr.c  wstrchr.h  wstring.c  wstring.h  wsubstr.c  wsubstr.h  wsupstr.c  wsupstr.h
attic/cauta/build-aux/: .gitignore
attic/cauta/cac/: Makefile.am  ast.c  ast.h  class.c  expr.c  fatal.c  fatal.h  func.c  hashtbl.c  hashtbl.h  infra.h  lexer.h  literals.c  macros.h  main.c  memory.c  memory.h  module.c  package.c  parse.c  parser.h  scanner.c  strutils.c  strutils.h  token.c  token.h  var.c  vector.c  vector.h  xdecl.c
attic/cauta/contrib/: Makefile.am
attic/cauta/contrib/completion/: cautac-completion.bash
attic/cauta/docs/: quotes.txt
attic/cauta/docs/man/: Makefile.am  cautac.1.rst  cautafmt.1.rst
attic/cauta/extras/antlr/: C.g4  CPP14.g4  Cauta.g4  Java.g4
attic/cauta/include/: Makefile.am  config-site.h.in
attic/cauta/m4/: ax_c___attribute__.m4  ax_prog_docutils.m4  ax_rpmbuild.m4  ax_wint_t.m4  cac_configh.m4  cac_funcs.m4  cac_libs.m4  cac_progs.m4  cac_types.m4  cauta_args.m4  cauta_globals.m4  cauta_progs.m4
attic/cauta/packaging/: packagize-deb  packagize-rpm
attic/cauta/packaging/deb/: README.Debian  changelog.in  control  copyright
attic/cauta/src/: Makefile.am  scratchpad.ca
attic/cauta/src-internal/: Makefile.am  cauta-std
attic/funex/: .gitignore  AUTHORS  COPYING  Makefile.am  Makefile.dev  README.md  SConstruct  TODO  bootstrap  common.mk.in  configure.ac  fixstyle  funex.pc.in  sconsx.py
attic/funex/apps/: Makefile.am  SConscript  funex-app.h  funex-dump.c  funex-fsck.c  funex-fsd.c  funex-mkfs.c  funex-mntd.c  funex-mount.c  funex-show.c  funex-test.c  funex.conf.in
attic/funex/build-aux/: .gitignore  Makefile.subs  version.sh
attic/funex/docs/: Makefile.am
attic/funex/extras/: Makefile.am
attic/funex/include/: Makefile.am  fnxconfig.h  fnxcore.h  fnxdefs.h  fnxfusei.h  fnxhash.h  fnxinfra.h  fnxpstor.h  fnxserv.h  fnxvproc.h
attic/funex/libfnx/: Makefile.am  SConscript  server-boot.c  server-dispatch.c  server-exec.c  server-exec.h  server-pseudo.c
attic/funex/m4/: .gitignore  ax_c_long_long.m4  ax_c_var_func.m4  ax_pthread.m4  ax_split_version.m4  ax_with_prog.m4  package_funcs.m4  package_globals.m4  package_libs.m4  package_progs.m4  package_types.m4
attic/funex/scripts/: astyle-files.sh  build-cleanup.sh  checkcstyle.py  clang-scan-build.sh  cppcheck-project.sh  dedupable.py  find-list-srcs.sh  fio-benchmark.sh  fix-check-cstyle.sh  git-pre-commit-hook.sh  gpl-header.sh  gpl-notice  lcov-execute.sh  lgpl-notice  pep8-files.sh  perf-record-report.sh  pycheck-files.sh  pylint3-files.sh  reduce-typedefs.sh  statwalker.py  torture-fs.sh  valgrind-memcheck.sh
attic/funex/unitests/: Makefile.am  SConscript  benchmark-set.cpp  perf-vs-tsearch.c  utest-atomic.c  utest-core-elems.c  utest-core-spmap.c  utest-fifo.c  utest-hash-quality.c  utest-hash-sanity.c  utest-iobufs.c  utest-list.c  utest-slist.c  utest-sockets.c  utest-substr.c  utest-thread.c  utest-tree.c  utest-vs-stl-map.cpp  utest-vs-stl-set.cpp  utest-vs-tsearch.c  utest-wsubstr.c
attic/voluta/: .gitignore  Makefile.am  README  TODO  astyleall.sh  bootstrap  checkstyle.sh  common.mk.in  configure.ac  makefile  version.sh
attic/voluta/doc/: Makefile.am  voluta.1.txt
attic/voluta/include/: Makefile.am  config-site.h.in
attic/voluta/lib/: Makefile.am  avl.c  bringup.c  cache.c  config.c  crypto.c  dir.c  execfs.c  execmnt.c  file.c  fusei.c  fuseq.c  hash.c  init.c  inode.c  itable.c  libvoluta.h  list.c  mpool.c  namei.c  opers.c  panic.c  persist.c  qalloc.c  qmalloc.c  socket.c  space.c  super.c  symlink.c  syscall.c  thread.c  usyscall.c  utility.c  version.c  volume.c  voluta-inline.h  voluta-lib.h  xattr.c  xsyscall.c
attic/voluta/m4/: voluta_args.m4  voluta_configh.m4  voluta_funcs.m4  voluta_globals.m4  voluta_libs.m4  voluta_progs.m4  voluta_types.m4
attic/voluta/misc/: Makefile.am  checkcstyle.py  clangscanbuild.py  clangtidycheck.sh  ddreadwrite.sh  fio2csv.py  fio2csv.sh  fio2plot.py  fio4voluta.sh  fiocsv2plot.py  fsstress.sh  gitarchive.sh  torturefs.sh  voluta-journalctl.sh
attic/voluta/prog/: Makefile.am  archive.c  common.c  fsck-main.c  fsck.c  getpass.c  main.c  mkfs-main.c  mkfs.c  mount-main.c  mount.c  progs.h
attic/voluta/sanity/: Makefile.am  sanity.h  sanity_execute.c  sanity_main.c  sanity_syscall.c  sanity_utility.c  test_access.c  test_basic_io.c  test_boundaries.c  test_chmod_chown.c  test_clone.c  test_copy_file_range.c  test_create.c  test_fallocate.c  test_fsync.c  test_link.c  test_lseek.c  test_lseek_file.c  test_mkdir.c  test_mknod.c  test_mmap.c  test_namespace.c  test_open.c  test_random_rw.c  test_readdir.c  test_rename.c  test_sequential_file.c  test_sparse_file.c  test_stat.c  test_stat_io.c  test_statvfs.c  test_symlink.c  test_tmpfile.c  test_truncate.c  test_truncate_file.c  test_unlink.c  test_unlinked_file.c  test_utimes.c  test_write.c  test_xattr.c
attic/voluta/src/: Makefile.am  common.c  fsck-main.c  fsck.c  getpass.c  inquiry.c  main-mountd.c  main.c  mkfs-main.c  mkfs.c  mount-main.c  mount.c  query.c  restore.c  show.c  voluta-prog.h
attic/voluta/test/: Makefile.am  unitest.h  unitest_execute.c  unitest_ops.c  ut_alloc.c  ut_dir.c  ut_dir_list.c  ut_file_basic.c  ut_file_edges.c  ut_file_falloc.c  ut_file_random.c  ut_file_trunc.c  ut_symlink.c  ut_xattr.c
(+546 files in other folders)
