-include $(top_builddir)/common.mk

noinst_PROGRAMS = cac
cac_CPPFLAGS = -I$(top_srcdir)/include -DCAC_BUILDDATE="$(builddate)"
cac_LDFLAGS = $(NULL)
cac_LDADD = -lgc
cac_SOURCES = $(NULL)
cac_SOURCES += ast.c
cac_SOURCES += ast.h
cac_SOURCES += class.c
cac_SOURCES += expr.c
cac_SOURCES += fatal.c
cac_SOURCES += fatal.h
cac_SOURCES += func.c
cac_SOURCES += hashtbl.c
cac_SOURCES += hashtbl.h
cac_SOURCES += infra.h
cac_SOURCES += lexer.h
cac_SOURCES += literals.c
cac_SOURCES += macros.h
cac_SOURCES += main.c
cac_SOURCES += memory.c
cac_SOURCES += memory.h
cac_SOURCES += module.c
cac_SOURCES += package.c
cac_SOURCES += parse.c
cac_SOURCES += parser.h
cac_SOURCES += scanner.c
cac_SOURCES += strutils.c
cac_SOURCES += strutils.h
cac_SOURCES += token.c
cac_SOURCES += token.h
cac_SOURCES += var.c
cac_SOURCES += vector.c
cac_SOURCES += vector.h
cac_SOURCES += xdecl.c
