include $(top_builddir)/common.mk
EXTRA_DIST = SConscript

AM_CPPFLAGS = \
-I$(top_srcdir) \
-I$(top_srcdir)/include \
$(NULL)

noinst_LIBRARIES = libfnx.a
libfnx_a_SOURCES = \
hash/adler.c \
hash/balagan.h \
hash/bardak.c \
hash/blake.c \
hash/crc.c \
hash/cubehash.c \
hash/fnv.c \
hash/hsieh.c \
hash/murmur3.c \
hash/prandom.c \
hash/siphash.c \
hash/wang.c \
infra/infra-ascii.c \
infra/infra-ascii.h \
infra/infra-atomic.c \
infra/infra-atomic.h \
infra/infra-bitops.c \
infra/infra-bitops.h \
infra/infra-compiler.h \
infra/infra-fifo.c \
infra/infra-fifo.h \
infra/infra-list.c \
infra/infra-list.h \
infra/infra-logger.c \
infra/infra-logger.h \
infra/infra-macros.h \
infra/infra-mount.c \
infra/infra-panic.c \
infra/infra-panic.h \
infra/infra-sockets.c \
infra/infra-sockets.h \
infra/infra-string.c \
infra/infra-string.h \
infra/infra-substr.c \
infra/infra-substr.h \
infra/infra-system.c \
infra/infra-system.h \
infra/infra-thread.c \
infra/infra-thread.h \
infra/infra-timex.c \
infra/infra-timex.h \
infra/infra-tree.c \
infra/infra-tree.h \
infra/infra-utility.c \
infra/infra-utility.h \
infra/infra-wstring.c \
infra/infra-wstring.h \
infra/infra-wsubstr.c \
infra/infra-wsubstr.h \
core/core-addr.c \
core/core-addr.h \
core/core-addri.h \
core/core-alloc.c \
core/core-alloc.h \
core/core-alloc-mm.c \
core/core-alloc-slab.h \
core/core-bdev.c \
core/core-bdev.h \
core/core-blobs.h \
core/core-cache.c \
core/core-cache.h \
core/core-dir.c \
core/core-dir.h \
core/core-diri.h \
core/core-elems.c \
core/core-elems.h \
core/core-errnum.h \
core/core-file.c \
core/core-file.h \
core/core-htod.c \
core/core-htod.h \
core/core-inode.c \
core/core-inode.h \
core/core-inodei.h \
core/core-iobuf.c \
core/core-iobuf.h \
core/core-ioctl.c \
core/core-ioctl.h \
core/core-jobsq.c \
core/core-jobsq.h \
core/core-proto.h \
core/core-repr.c \
core/core-repr.h \
core/core-space.c \
core/core-space.h \
core/core-stats.c \
core/core-stats.h \
core/core-super.c \
core/core-super.h \
core/core-task.c \
core/core-task.h \
core/core-types.c \
core/core-types.h \
core/core-verify.c \
pstor/pstor-boot.c \
pstor/pstor-exec.c \
pstor/pstor-exec.h \
pstor/pstor-private.c \
pstor/pstor-private.h \
vproc/vproc-boot.c \
vproc/vproc-data.c \
vproc/vproc-data.h \
vproc/vproc-elems.h \
vproc/vproc-exec.c \
vproc/vproc-exec.h \
vproc/vproc-let.c \
vproc/vproc-let.h \
vproc/vproc-namei.c \
vproc/vproc-opers.c \
vproc/vproc-private.c \
vproc/vproc-private.h \
vproc/vproc-rename.c \
fusei/fusei-bridge.c \
fusei/fusei-elems.h \
fusei/fusei-exec.c \
fusei/fusei-exec.h \
fusei/fusei-mount.c \
fusei/fusei-mount.h \
fusei/fusei-reply.c \
fusei/fusei-reply.h \
fusei/fusei-users.c \
server-boot.c \
server-dispatch.c \
server-exec.c \
server-exec.h \
server-pseudo.c \
$(NULL)
