-include $(top_builddir)/common.mk

nobase_include_HEADERS = $(NULL)
nobase_include_HEADERS += voluta/voluta-syscall.h
nobase_include_HEADERS += voluta/voluta-infra.h
nobase_include_HEADERS += voluta/voluta-defs.h
nobase_include_HEADERS += voluta/voluta.h

noinst_HEADERS = $(NULL)
noinst_HEADERS += config.h
noinst_HEADERS += config-site.h
noinst_HEADERS += voluta/voluta-test.h

EXTRA_DIST = config-site.h.in
BUILT_SOURCES = config-site.h
CLEANFILES = config-site.h
