-include $(top_builddir)/common.mk

nobase_include_HEADERS = $(NULL)
nobase_include_HEADERS += voluta/api.h
nobase_include_HEADERS += voluta/defs.h
nobase_include_HEADERS += voluta/syscall.h
nobase_include_HEADERS += voluta/logging.h
nobase_include_HEADERS += voluta/macros.h
nobase_include_HEADERS += voluta/voluta.h

noinst_HEADERS = $(NULL)
noinst_HEADERS += config.h
noinst_HEADERS += config-site.h
noinst_HEADERS += voluta/avl.h
noinst_HEADERS += voluta/core.h
noinst_HEADERS += voluta/error.h
noinst_HEADERS += voluta/fuse.h
noinst_HEADERS += voluta/infra.h
noinst_HEADERS += voluta/list.h
noinst_HEADERS += voluta/socket.h
noinst_HEADERS += voluta/types.h

EXTRA_DIST = config-site.h.in
BUILT_SOURCES = config-site.h
CLEANFILES = config-site.h
