-include $(top_builddir)/common.mk

bashcompletiondir = $(datarootdir)/bash-completion/completions
dist_bashcompletion_DATA = completions/voluta
EXTRA_DIST = $(dist_bashcompletion_DATA)

EXTRA_DIST += ddreadwrite.sh
EXTRA_DIST += fsstress.sh
EXTRA_DIST += gitarchive.sh
EXTRA_DIST += torturefs.sh
EXTRA_DIST += voluta-journalctl.sh
EXTRA_DIST += checkcstyle.py
EXTRA_DIST += clangscanbuild.py
EXTRA_DIST += clangtidycheck.sh
EXTRA_DIST += fio2csv.sh
EXTRA_DIST += fiocsv2plot.py
EXTRA_DIST += valgrind-memcheck.sh
