-include $(top_builddir)/common.mk

bin_PROGRAMS = voluta-fsstest
voluta_fsstest_CPPFLAGS = $(NULL)
voluta_fsstest_CPPFLAGS += -I$(top_srcdir)/include
voluta_fsstest_LDFLAGS = $(NULL)
voluta_fsstest_LDFLAGS += -L$(top_builddir)/lib
voluta_fsstest_LDFLAGS += -static
voluta_fsstest_LDADD = @LIBS@
voluta_fsstest_LDADD += $(top_builddir)/lib/libvoluta.la
voluta_fsstest_SOURCES = $(NULL)
voluta_fsstest_SOURCES += fsstest_execute.c
voluta_fsstest_SOURCES += fsstest.h
voluta_fsstest_SOURCES += fsstest_main.c
voluta_fsstest_SOURCES += fsstest_syscall.c
voluta_fsstest_SOURCES += fsstest_utility.c
voluta_fsstest_SOURCES += test_access.c
voluta_fsstest_SOURCES += test_basic_io.c
voluta_fsstest_SOURCES += test_boundaries.c
voluta_fsstest_SOURCES += test_chmod_chown.c
voluta_fsstest_SOURCES += test_clone.c
voluta_fsstest_SOURCES += test_copy_file_range.c
voluta_fsstest_SOURCES += test_create.c
voluta_fsstest_SOURCES += test_fallocate.c
voluta_fsstest_SOURCES += test_fiemap.c
voluta_fsstest_SOURCES += test_fsync.c
voluta_fsstest_SOURCES += test_link.c
voluta_fsstest_SOURCES += test_lseek.c
voluta_fsstest_SOURCES += test_lseek_file.c
voluta_fsstest_SOURCES += test_mkdir.c
voluta_fsstest_SOURCES += test_mknod.c
voluta_fsstest_SOURCES += test_mmap.c
voluta_fsstest_SOURCES += test_namespace.c
voluta_fsstest_SOURCES += test_open.c
voluta_fsstest_SOURCES += test_random_rw.c
voluta_fsstest_SOURCES += test_readdir.c
voluta_fsstest_SOURCES += test_rename.c
voluta_fsstest_SOURCES += test_sequential_file.c
voluta_fsstest_SOURCES += test_sparse_file.c
voluta_fsstest_SOURCES += test_stat.c
voluta_fsstest_SOURCES += test_stat_io.c
voluta_fsstest_SOURCES += test_statvfs.c
voluta_fsstest_SOURCES += test_symlink.c
voluta_fsstest_SOURCES += test_tmpfile.c
voluta_fsstest_SOURCES += test_truncate.c
voluta_fsstest_SOURCES += test_truncate_file.c
voluta_fsstest_SOURCES += test_unlink.c
voluta_fsstest_SOURCES += test_unlinked_file.c
voluta_fsstest_SOURCES += test_utimes.c
voluta_fsstest_SOURCES += test_write.c
voluta_fsstest_SOURCES += test_xattr.c

