-include $(top_builddir)/common.mk

bin_PROGRAMS = voluta-fstests
voluta_fstests_CPPFLAGS = -I$(top_srcdir)/include
voluta_fstests_LDFLAGS = $(NULL)
voluta_fstests_LDFLAGS += -L$(top_builddir)/lib
voluta_fstests_LDFLAGS += -static
voluta_fstests_LDADD = @LIBS@
voluta_fstests_LDADD += $(top_builddir)/lib/libvoluta.la
voluta_fstests_SOURCES = $(NULL)
voluta_fstests_SOURCES += fstests_execute.c
voluta_fstests_SOURCES += fstests.h
voluta_fstests_SOURCES += fstests_main.c
voluta_fstests_SOURCES += fstests_syscall.c
voluta_fstests_SOURCES += fstests_utility.c
voluta_fstests_SOURCES += test_access.c
voluta_fstests_SOURCES += test_basic_io.c
voluta_fstests_SOURCES += test_boundaries.c
voluta_fstests_SOURCES += test_chmod_chown.c
voluta_fstests_SOURCES += test_clone.c
voluta_fstests_SOURCES += test_copy_file_range.c
voluta_fstests_SOURCES += test_create.c
voluta_fstests_SOURCES += test_fallocate.c
voluta_fstests_SOURCES += test_fsync.c
voluta_fstests_SOURCES += test_link.c
voluta_fstests_SOURCES += test_lseek.c
voluta_fstests_SOURCES += test_lseek_file.c
voluta_fstests_SOURCES += test_mkdir.c
voluta_fstests_SOURCES += test_mknod.c
voluta_fstests_SOURCES += test_mmap.c
voluta_fstests_SOURCES += test_namespace.c
voluta_fstests_SOURCES += test_open.c
voluta_fstests_SOURCES += test_random_rw.c
voluta_fstests_SOURCES += test_readdir.c
voluta_fstests_SOURCES += test_rename.c
voluta_fstests_SOURCES += test_sequential_file.c
voluta_fstests_SOURCES += test_sparse_file.c
voluta_fstests_SOURCES += test_stat.c
voluta_fstests_SOURCES += test_stat_io.c
voluta_fstests_SOURCES += test_statvfs.c
voluta_fstests_SOURCES += test_symlink.c
voluta_fstests_SOURCES += test_tmpfile.c
voluta_fstests_SOURCES += test_truncate.c
voluta_fstests_SOURCES += test_truncate_file.c
voluta_fstests_SOURCES += test_unlink.c
voluta_fstests_SOURCES += test_unlinked_file.c
voluta_fstests_SOURCES += test_utimes.c
voluta_fstests_SOURCES += test_write.c
voluta_fstests_SOURCES += test_xattr.c

