-include $(top_builddir)/common.mk

bin_PROGRAMS = voluta-sanity
voluta_sanity_CPPFLAGS = $(NULL)
voluta_sanity_CPPFLAGS += -I$(top_srcdir)/include
voluta_sanity_LDFLAGS = $(NULL)
voluta_sanity_LDFLAGS += -L$(top_builddir)/lib
voluta_sanity_LDFLAGS += -static
voluta_sanity_LDADD = @LIBS@
voluta_sanity_LDADD += $(top_builddir)/lib/libvoluta.la
voluta_sanity_SOURCES = $(NULL)
voluta_sanity_SOURCES += sanity_execute.c
voluta_sanity_SOURCES += sanity.h
voluta_sanity_SOURCES += sanity_main.c
voluta_sanity_SOURCES += sanity_syscall.c
voluta_sanity_SOURCES += sanity_utility.c
voluta_sanity_SOURCES += test_access.c
voluta_sanity_SOURCES += test_basic_io.c
voluta_sanity_SOURCES += test_boundaries.c
voluta_sanity_SOURCES += test_chmod_chown.c
voluta_sanity_SOURCES += test_clone.c
voluta_sanity_SOURCES += test_copy_file_range.c
voluta_sanity_SOURCES += test_create.c
voluta_sanity_SOURCES += test_fallocate.c
voluta_sanity_SOURCES += test_fsync.c
voluta_sanity_SOURCES += test_link.c
voluta_sanity_SOURCES += test_lseek.c
voluta_sanity_SOURCES += test_lseek_file.c
voluta_sanity_SOURCES += test_mkdir.c
voluta_sanity_SOURCES += test_mknod.c
voluta_sanity_SOURCES += test_mmap.c
voluta_sanity_SOURCES += test_namespace.c
voluta_sanity_SOURCES += test_open.c
voluta_sanity_SOURCES += test_random_rw.c
voluta_sanity_SOURCES += test_readdir.c
voluta_sanity_SOURCES += test_rename.c
voluta_sanity_SOURCES += test_sequential_file.c
voluta_sanity_SOURCES += test_sparse_file.c
voluta_sanity_SOURCES += test_stat.c
voluta_sanity_SOURCES += test_stat_io.c
voluta_sanity_SOURCES += test_statvfs.c
voluta_sanity_SOURCES += test_symlink.c
voluta_sanity_SOURCES += test_tmpfile.c
voluta_sanity_SOURCES += test_truncate.c
voluta_sanity_SOURCES += test_truncate_file.c
voluta_sanity_SOURCES += test_unlink.c
voluta_sanity_SOURCES += test_unlinked_file.c
voluta_sanity_SOURCES += test_utimes.c
voluta_sanity_SOURCES += test_write.c
voluta_sanity_SOURCES += test_xattr.c

