-include $(top_builddir)/common.mk

bin_PROGRAMS = voluta-vfstest
voluta_vfstest_CPPFLAGS = $(NULL)
voluta_vfstest_CPPFLAGS += -I$(top_srcdir)/include
voluta_vfstest_LDFLAGS = $(NULL)
voluta_vfstest_LDFLAGS += -L$(top_builddir)/lib
voluta_vfstest_LDFLAGS += -static
voluta_vfstest_LDADD = @LIBS@
voluta_vfstest_LDADD += $(top_builddir)/lib/libvoluta.la
voluta_vfstest_SOURCES = $(NULL)
voluta_vfstest_SOURCES += vfstest_execute.c
voluta_vfstest_SOURCES += vfstest.h
voluta_vfstest_SOURCES += vfstest_main.c
voluta_vfstest_SOURCES += vfstest_syscall.c
voluta_vfstest_SOURCES += vfstest_utility.c
voluta_vfstest_SOURCES += test_access.c
voluta_vfstest_SOURCES += test_basic_io.c
voluta_vfstest_SOURCES += test_boundaries.c
voluta_vfstest_SOURCES += test_chmod_chown.c
voluta_vfstest_SOURCES += test_clone.c
voluta_vfstest_SOURCES += test_copy_file_range.c
voluta_vfstest_SOURCES += test_create.c
voluta_vfstest_SOURCES += test_fallocate.c
voluta_vfstest_SOURCES += test_fiemap.c
voluta_vfstest_SOURCES += test_fsync.c
voluta_vfstest_SOURCES += test_link.c
voluta_vfstest_SOURCES += test_lseek.c
voluta_vfstest_SOURCES += test_mkdir.c
voluta_vfstest_SOURCES += test_mknod.c
voluta_vfstest_SOURCES += test_mmap.c
voluta_vfstest_SOURCES += test_namespace.c
voluta_vfstest_SOURCES += test_open.c
voluta_vfstest_SOURCES += test_random_rw.c
voluta_vfstest_SOURCES += test_readdir.c
voluta_vfstest_SOURCES += test_rename.c
voluta_vfstest_SOURCES += test_sequential_file.c
voluta_vfstest_SOURCES += test_sparse_file.c
voluta_vfstest_SOURCES += test_stat.c
voluta_vfstest_SOURCES += test_stat_io.c
voluta_vfstest_SOURCES += test_statvfs.c
voluta_vfstest_SOURCES += test_symlink.c
voluta_vfstest_SOURCES += test_tmpfile.c
voluta_vfstest_SOURCES += test_truncate.c
voluta_vfstest_SOURCES += test_truncate_file.c
voluta_vfstest_SOURCES += test_unlink.c
voluta_vfstest_SOURCES += test_unlinked_file.c
voluta_vfstest_SOURCES += test_utimes.c
voluta_vfstest_SOURCES += test_write.c
voluta_vfstest_SOURCES += test_xattr.c

